; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_wcs_to_utf8.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_wcs_to_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @os_wcs_to_utf8(i32* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %58

15:                                               ; preds = %4
  %16 = load i64, i64* %7, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %15
  %19 = load i64, i64* %7, align 8
  br label %23

20:                                               ; preds = %15
  %21 = load i32*, i32** %6, align 8
  %22 = call i64 @wcslen(i32* %21)
  br label %23

23:                                               ; preds = %20, %18
  %24 = phi i64 [ %19, %18 ], [ %22, %20 ]
  store i64 %24, i64* %10, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %30

27:                                               ; preds = %23
  %28 = load i64, i64* %9, align 8
  %29 = sub i64 %28, 1
  br label %34

30:                                               ; preds = %23
  %31 = load i32*, i32** %6, align 8
  %32 = load i64, i64* %10, align 8
  %33 = call i64 @wchar_to_utf8(i32* %31, i64 %32, i8* null, i64 0, i32 0)
  br label %34

34:                                               ; preds = %30, %27
  %35 = phi i64 [ %29, %27 ], [ %33, %30 ]
  store i64 %35, i64* %11, align 8
  %36 = load i8*, i8** %8, align 8
  %37 = icmp ne i8* %36, null
  br i1 %37, label %38, label %56

38:                                               ; preds = %34
  %39 = load i64, i64* %9, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %42, label %41

41:                                               ; preds = %38
  store i64 0, i64* %5, align 8
  br label %58

42:                                               ; preds = %38
  %43 = load i64, i64* %11, align 8
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %52

45:                                               ; preds = %42
  %46 = load i32*, i32** %6, align 8
  %47 = load i64, i64* %10, align 8
  %48 = load i8*, i8** %8, align 8
  %49 = load i64, i64* %11, align 8
  %50 = add i64 %49, 1
  %51 = call i64 @wchar_to_utf8(i32* %46, i64 %47, i8* %48, i64 %50, i32 0)
  store i64 %51, i64* %11, align 8
  br label %52

52:                                               ; preds = %45, %42
  %53 = load i8*, i8** %8, align 8
  %54 = load i64, i64* %11, align 8
  %55 = getelementptr inbounds i8, i8* %53, i64 %54
  store i8 0, i8* %55, align 1
  br label %56

56:                                               ; preds = %52, %34
  %57 = load i64, i64* %11, align 8
  store i64 %57, i64* %5, align 8
  br label %58

58:                                               ; preds = %56, %41, %14
  %59 = load i64, i64* %5, align 8
  ret i64 %59
}

declare dso_local i64 @wcslen(i32*) #1

declare dso_local i64 @wchar_to_utf8(i32*, i64, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
